--- a/CursachPrototype/Views/Account/Register.cshtml
+++ b/CursachPrototype/Views/Account/Register.cshtml
@@ -10,10 +10,8 @@
         @Html.AntiForgeryToken()
         <div>
             <hr/>
-            <div class="alert alert-error text-center col-md-6 col-md-offset-3">
-                <a class="close" data-dismiss="alert">×</a>
-                <h5 class="alert-heading">Вход не выполнен</h5>
-                @Html.ValidationSummary(true)
+            <div class="alert text-center" style="color: red;">
+                <h3>@Html.ValidationSummary()</h3>
             </div>
 
             <div class="form-group text-center col-md-6 col-md-offset-3">
