--- a/CursachPrototype/Views/CsDispatcher/CreateAnonymousDb.cshtml
+++ b/CursachPrototype/Views/CsDispatcher/CreateAnonymousDb.cshtml
@@ -20,7 +20,9 @@
     @using (Html.BeginForm("CreateAnonymousDb", "CsDispatcher", FormMethod.Post, new { @id = "mainForm" }))
     {
         @Html.AntiForgeryToken()
-        @Html.ValidationSummary()
+        <div class="alert text-center" style="color: red;">
+            <h3>@Html.ValidationSummary()</h3>
+        </div>
 
         <div class="col-md-6 col-md-offset-3 form-group text-center">
             @Html.LabelFor(m => m.DataBaseName, "Название:")
