--- a/CursachPrototype/Views/Shared/_Message.cshtml
+++ b/CursachPrototype/Views/Shared/_Message.cshtml
@@ -1,3 +1,7 @@
 ﻿@model String
 
-<b>@Model</b>
+<div class="container">
+    <div class="alert alert-danger text-center">
+        <h2>@Html.ValidationSummary();</h2>
+    </div>
+</div>
