Succesfully adde theme

--- a/CursachPrototype/Views/Shared/_Layout.cshtml
+++ b/CursachPrototype/Views/Shared/_Layout.cshtml
@@ -5,6 +5,13 @@
     <link href="@Url.Content("~/Content/Styles/Site.css")" type="text/css" rel="stylesheet" />
     <link href="@Url.Content("~/Content/Bootstrap/bootstrap.min.css")" type="text/css" rel="stylesheet" />
     <link href="@Url.Content("~/Content/DarkTheme.min.css")" rel="stylesheet" type="text/css">
+    <link href="@Url.Content("~/Content/DarkTheme/vendor/font-awesome/css/font-awesome.min.css")" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <!-- Plugin CSS -->
+    <link href="@Url.Content("~/Content/DarkTheme/vendor/magnific-popup/magnific-popup.css")" rel="stylesheet">
+    <!-- DarkTheme CSS -->
+    <link href="@Url.Content("~/Content/DarkTheme/css/creative.min.css")" rel="stylesheet">
     @RenderSection("Styles", false)
     <script src="@Url.Content("~/Scripts/jquery-3.1.1.min.js")"></script>
     <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
@@ -17,3 +24,6 @@
     @RenderBody()
 </body>
 </html>
+
+<!-- DarkTheme JavaScript -->
+<script src="@Url.Content("~/Content/DarkTheme/js/creative.min.js")"></script>
