--- a/CursachPrototype/Views/DisplayTable/CreateTable.cshtml
+++ b/CursachPrototype/Views/DisplayTable/CreateTable.cshtml
@@ -28,7 +28,7 @@
                 }
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-success" form="mainEditForm">Сохранить</button>
+                <button type="submit" class="btn btn-success" form="mainEditForm">Создать</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
             </div>
         </div>
