--- a/CursachPrototype/Views/Home/Index.cshtml
+++ b/CursachPrototype/Views/Home/Index.cshtml
@@ -5,10 +5,10 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1 id="homeHeading">Ваш лучший помощник по созданию удаленных баз данных</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <p>Используя FastSQL вы имеете возможность создать бесплантную базу данных в один клик!</p>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">Ух-ты</a>
         </div>
     </div>
 </header>
@@ -16,10 +16,13 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <h2 class="section-heading">У нас есть всё что вам надо!</h2>
                 <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                <p class="text-faded">
+                    Используя FastSQL создавайте общедоступную базу данных в один клик! Без регистрации и длительных настроек!
+                    Все созданные базы данных будут расположены на облачном сервере Azure и доступны в любой вашей программе для использования.
+                </p>
+                <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">СОздать</a>
             </div>
         </div>
     </div>
@@ -28,40 +31,33 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">At Your Service</h2>
+                <h2 class="section-heading">Создавайте прямо сейчас</h2>
                 <hr class="primary">
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
-                </div>
+            <div class="col-lg-5 col-lg-offset-1 col-md-6 text-center">
+                <a href="@Url.Action("CreateAnonymousDb", "CsDispatcher")">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <h3>База Данных без регистрации</h3>
+                        <p class="text-muted">Создается база данных со случайно сгенирированными учётными данными.</p>
+                    </div>
+                </a>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
-                </div>
+            <div class="col-lg-5 col-md-6 text-center">
+                <a href="@Url.Action("CreateProtectedDb","CsDispatcher")">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
+                        <h3>Защищенная база данных</h3>
+                        <p class="text-muted">
+                            Создается база данных. В качестве логина выступает ваш ник, пароля - заданный при создании пароль.
+                            База данных добавляется в личный кабинет может быть редактирована прямо на сайте.
+                        </p>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -75,10 +71,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                AZURE
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Microsoft AZURE является одним из самых надежных поставщиков облачных технологий. Мы используем Azure для хостинга ваших баз данных
                             </div>
                         </div>
                     </div>
@@ -90,10 +86,11 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                SQL
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Structured Query Language является признаным стандартом по управлению Базами Данных. Вы можете в любой момент из личного кабинета обратится к
+                                вашей базе данных с помощью нашего поля SQL запросов.
                             </div>
                         </div>
                     </div>
@@ -105,55 +102,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                SQL Server 2014
                             </div>
                             <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="@Url.Content("~/Content/DarkTheme/img/portfolio/fullsize/4.jpg")" class="portfolio-box">
-                    <img src="@Url.Content("~/Content/DarkTheme/img/portfolio/thumbnails/4.jpg")" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="@Url.Content("~/Content/DarkTheme/img/portfolio/fullsize/5.jpg")" class="portfolio-box">
-                    <img src="@Url.Content("~/Content/DarkTheme/img/portfolio/thumbnails/5.jpg")" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="@Url.Content("~/Content/DarkTheme/img/portfolio/fullsize/6.jpg")" class="portfolio-box">
-                    <img src="@Url.Content("~/Content/DarkTheme/img/portfolio/thumbnails/6.jpg")" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
+                                SQL Server является Системой Управления Реляционными Базами Данных от компании Microsoft. Сильный конкурент в корпоративном сегмените рынка.
                             </div>
                         </div>
                     </div>
@@ -165,8 +117,8 @@
 <aside class="bg-dark">
     <div class="container text-center">
         <div class="call-to-action">
-            <h2>Free Download at Start Bootstrap!</h2>
-            <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
+            <h2>Перейти в личный кабинет</h2>
+            @Html.ActionLink("Личный кабинет", "Index", "UserRoom", new { @class = "btn btn-default btn-xl sr-button" })
         </div>
     </div>
 </aside>
@@ -174,18 +126,18 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Let's Get In Touch!</h2>
+                <h2 class="section-heading">Let's Stay In Touch!</h2>
                 <hr class="primary">
-                <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                <p>Если вам что-то не нравится или возникли какие-либо вопросы - свяжитесь с нами!</p>
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
                 <i class="fa fa-phone fa-3x sr-contact"></i>
-                <p>123-456-6789</p>
+                <p>+38068-395-75-98</p>
             </div>
             <div class="col-lg-4 text-center">
                 <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                 <p>
-                    <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+                    kosuakiv@gmail.com
                 </p>
             </div>
         </div>
