--- a/CursachPrototype/Views/Home/Index.cshtml
+++ b/CursachPrototype/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1 id="homeHeading">Ваш лучший помощник по созданию удаленных баз данных</h1>
+            <h1 id="homeHeading">Fast SQL - Ваш лучший помощник по созданию удаленных баз данных</h1>
             <hr>
             <p>Используя FastSQL вы имеете возможность создать бесплантную базу данных в один клик!</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Ух-ты</a>
