Added return to required table, fixed bug with wrong datatable

--- a/CursachPrototype/Views/CsDispatcher/CreateAnonymousDb.cshtml
+++ b/CursachPrototype/Views/CsDispatcher/CreateAnonymousDb.cshtml
@@ -9,7 +9,7 @@
         textBox.empty();
 
         var ticks = (new Date().getTime());
-        var name = "db" + ticks + "_Anon";
+        var name = "db" + ticks;
         textBox.val(name);
     }
 </script>
