--- a/CursachPrototype/Views/DisplayTable/DeleteRow.cshtml
+++ b/CursachPrototype/Views/DisplayTable/DeleteRow.cshtml
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                @Html.ActionLink("Удалить", "DeleteConfirmed", new { id = Model }, new { @class = "btn btn-danger" })
+                @Html.ActionLink("Удалить", "DeleteRowConfirmed", new { id = Model }, new { @class = "btn btn-danger" })
                 <input type="button" class="btn btn-default" data-dismiss="modal" value="Закрыть"/>
             </div>
         </div>
