--- a/CursachPrototype/Views/DisplayTable/DeleteTable.cshtml
+++ b/CursachPrototype/Views/DisplayTable/DeleteTable.cshtml
@@ -29,7 +29,7 @@
                 }
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-success" form="mainEditForm">Сохранить</button>
+                <button type="submit" class="btn btn-danger" form="mainEditForm">Удалить</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
             </div>
         </div>
