--- a/CursachPrototype/Views/DisplayTable/DeleteRow.cshtml
+++ b/CursachPrototype/Views/DisplayTable/DeleteRow.cshtml
@@ -13,9 +13,9 @@
                 <h4 class="modal-title">Подтвердите удаление</h4>
             </div>
             <div class="modal-body">
-                <p>Вы уверены, что хотите удалить ряд # @Model</p>
+                <p>Вы уверены, что хотите удалить ряд # @Model?</p>
                 <div class="alert alert-danger" role="alert">
-                    <p>Данные безвозвратно уничтожены.</p>
+                    <p>Данные будут безвозвратно уничтожены.</p>
                 </div>
             </div>
             <div class="modal-footer">
