--- a/CursachPrototype/Views/DisplayTable/AddRow.cshtml
+++ b/CursachPrototype/Views/DisplayTable/AddRow.cshtml
@@ -67,7 +67,7 @@
                                 }
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-success" form="mainEditForm">Сохранить</button>
+                <button type="submit" class="btn btn-success" form="mainEditForm">Добавить</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
             </div>
         </div>
