--- a/CursachPrototype/Views/CsDispatcher/CreateProtectedDb.cshtml
+++ b/CursachPrototype/Views/CsDispatcher/CreateProtectedDb.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <h2 class="text-center">Созданиние защищенной базы данных</h2>
 
-    @using (Html.BeginForm("CreateProtectedDb", "CsDispatcher", FormMethod.Post, new { @id = "mainForm" }))
+    @using (Html.BeginForm("CreateProtectedDb", "CsDispatcher", FormMethod.Post, new {@id = "mainForm"}))
     {
         @Html.AntiForgeryToken()
         <div class="alert text-center" style="color: red;">
@@ -16,7 +16,7 @@
 
         <div class="col-md-6 col-md-offset-3 form-group text-center">
             @Html.LabelFor(m => m.DataBaseName, "Название:")
-            @Html.TextBoxFor(m => m.DataBaseName, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.DataBaseName, new {@class = "form-control"})
             @Html.ValidationMessageFor(m => m.DataBaseName)
         </div>
 
@@ -28,21 +28,22 @@
 
         <div class="col-md-6 col-md-offset-3 form-group text-center">
             @Html.LabelFor(m => m.PasswordConfiramtion, "Подтверждение пароля:")
-            @Html.PasswordFor(m => m.PasswordConfiramtion, new { @class = "form-control" })
+            @Html.PasswordFor(m => m.PasswordConfiramtion, new {@class = "form-control"})
             @Html.ValidationMessageFor(m => m.PasswordConfiramtion)
         </div>
 
         <div class="col-md-6 col-md-offset-4 radio-inline">
             @foreach (string server in Model.AvailableServers)
             {
-                <label>
-                    @Html.RadioButtonFor(m => m.SelectedServer, server)
-                    @server
-                </label>
+                <div class="col-md-6">
+                    <label>
+                        @Html.RadioButtonFor(m => m.SelectedServer, server)
+                        @server
+                    </label>
+                </div>
             }
             @Html.ValidationMessageFor(m => m.SelectedServer)
         </div>
     }
 </div>
-
-<button type="submit" class="btn btn-default center-block" form="mainForm">Создать</button>
+<button type="submit" class="btn btn-success center-block" form="mainForm">Создать</button>
