--- a/CursachPrototype/Views/Home/Index.cshtml
+++ b/CursachPrototype/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using CursachPrototype.ExtensionMethods
+@{
     ViewBag.Title = "Добро пожаловать";
 }
 
@@ -48,16 +49,28 @@
                 </a>
             </div>
             <div class="col-lg-5 col-md-6 text-center">
-                <a href="@Url.Action("CreateProtectedDb","CsDispatcher")">
+                <a href="@Url.Action("CreateProtectedDb", "CsDispatcher")">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Защищенная база данных</h3>
+                        <h3>Защищенная база данных (требуется регистрация)</h3>
                         <p class="text-muted">
                             Создается база данных. В качестве логина выступает ваш ник, пароля - заданный при создании пароль.
                             База данных добавляется в личный кабинет может быть редактирована прямо на сайте.
                         </p>
                     </div>
                 </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">ИЛИ</h2>
+                <hr class="primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="center-block text-center">
+                @Ajax.RawActionLink(" <div class=\"service-box\"> <i class=\"fa fa-4x fa-paper-plane text-primary sr-icons\"></i><h3>Запрос к базе данных</h3><p class=\"text-muted\">Сделайте запрос к вашей базе данных через наш сервис с использованием нашего SQL-редактора.</p></div>", 
+                "MakeQuery", "Home", null, new AjaxOptions {UpdateTargetId = "ajax"}, null)
             </div>
         </div>
     </div>
@@ -144,8 +157,13 @@
     </div>
 </section>
 
+<div id="ajax"></div>
+
 <!-- Plugin JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="@Url.Content("~/Content/DarkTheme/vendor/scrollreveal/scrollreveal.min.js")"></script>
 <script src="@Url.Content("~/Content/DarkTheme/vendor/magnific-popup/jquery.magnific-popup.min.js")"></script>
 
+@section Scripts{
+    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")"></script>
+}
