--- a/CursachPrototype/Views/CsDispatcher/RequestConnectionString.cshtml
+++ b/CursachPrototype/Views/CsDispatcher/RequestConnectionString.cshtml
@@ -23,6 +23,7 @@
                     <br>
                     <button class="btn btn-danger">Показать</button>
                     @Html.ActionLink("В личный кабинет", "Index", "UserRoom", null, new { @class = "btn btn-success" })
+                    @Html.ActionLink("Редактировать", "GoToEditingProtected", null, new { @class = "btn btn-info" })
                 </div>
             }
         }
