--- a/CursachPrototype/Views/DisplayTable/AddRow.cshtml
+++ b/CursachPrototype/Views/DisplayTable/AddRow.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Data
+@using System.Xml
 @using CursachPrototype.ExtensionMethods
 @model DataRow
 
@@ -55,7 +56,7 @@
                                 }
                                 else if (columnInfo.DataType == typeof(DateTime))
                                 {
-                                    <input type="datetime-local" class="form-control" id="@columnInfo.ColumnName" name="@columnInfo.ColumnName" />
+                                    <input type="datetime-local" class="form-control" id="@columnInfo.ColumnName" name="@columnInfo.ColumnName" value="@XmlConvert.ToString(DateTime.Now, XmlDateTimeSerializationMode.Unspecified)"/>
                                 }
                                 else
                                 {
